Upgrade to Java 10 (#492)
* Update deprecations

* Update gradle to 4.10

* Update build.gradle to Java 10

* Let Travis use JDK 10

* Fix Docker